# python-logic-simplifier

./: .project  LICENSE  README.md  logic_simplifier.sh  pyproject.toml  setup.cfg
src/: client.py
src/logic_simplifier/: __main__.py  expr.py  parser.py  perm.py  simplifier.py
