[metadata]
name = logic-simplifier
author = Kamil Jarosz
url = https://github.com/kjarosh/python-logic-simplifier
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
